fixed scrollbars

--- a/src/App.css
+++ b/src/App.css
@@ -3,18 +3,23 @@ html {
   -moz-box-sizing: border-box;
   box-sizing: border-box;
   font-family: "Open Sans", sans-serif;
-  background: linear-gradient(217deg, rgba(255,0,0,.8), rgba(255,0,0,0) 70.71%),
-    linear-gradient(127deg, rgba(0,255,0,.8), rgba(0,255,0,0) 70.71%),
-    linear-gradient(336deg, rgba(0,0,255,.8), rgba(0,0,255,0) 70.71%);
 }
 
-html, body {
+html,
+body {
   margin: 0;
   padding: 0;
 }
 
 body {
   height: 100vh;
+  background: linear-gradient(
+      217deg,
+      rgba(255, 0, 0, 0.8),
+      rgba(255, 0, 0, 0) 70.71%
+    ),
+    linear-gradient(127deg, rgba(0, 255, 0, 0.8), rgba(0, 255, 0, 0) 70.71%),
+    linear-gradient(336deg, rgba(0, 0, 255, 0.8), rgba(0, 0, 255, 0) 70.71%);
 }
 
 *,
@@ -27,7 +32,7 @@ body {
   display: block;
   width: 100vw;
   height: 100vh;
-  overflow: scroll;
+  overflow-x: hidden;
 }
 
 .main-container {
